# local-browser-use

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  test.py
adam/: main.py
jan/: .gitignore  README.md  main.py  pyproject.toml  results_1754443807.json  results_1754446576.json  results_1754446598.json
jan/prompts/: dom_extraction.js  system_prompt_backup.md  user_prompt_template.md
jan/reproducibility/: README.md  task_runner.py  webvoyager_runner.py
webvoyager_benchmark/prompts/: jscode.tmpt.tpl  system_prompt.pmpt.tpl
webvoyager_benchmark/reproducibility/: task_runner.py  test_setup.py  view_results.py  webvoyager_runner.py
webvoyager_benchmark/reproducibility/results/20250806_1941_PT_groq_gpt-oss_120b/: run_metadata.json
webvoyager_benchmark/reproducibility/results/20250806_1941_PT_groq_gpt-oss_120b/raw/: Allrecipes--0.json  Allrecipes--5.json
webvoyager_benchmark/reproducibility/results/20250806_1942_PT_groq_gpt-oss_120b/: run_metadata.json
webvoyager_benchmark/reproducibility/results/20250806_1942_PT_groq_gpt-oss_120b/raw/: Allrecipes--0.json  Allrecipes--1.json  Allrecipes--2.json  Allrecipes--4.json  Allrecipes--5.json  Allrecipes--8.json
webvoyager_benchmark/reproducibility/results/20250806_1943_PT_groq_gpt-oss_120b/: run_metadata.json
webvoyager_benchmark/reproducibility/results/20250806_1943_PT_groq_gpt-oss_120b/raw/: Allrecipes--4.json
